# FaceEmotionRecognition

./: .gitignore  README.md  app.ipynb
.github/: copilot-instructions.md
Multimodal-Emotion-Analyzer/: CLEANUP_SUMMARY.md  CMakeLists.txt  FINAL_PROJECT_STRUCTURE.md  HOW_TO_RUN.md  PROJECT_STRUCTURE.md  WINDOWS_INSTALLATION_GUIDE.md  build.bat  requirements.txt  setup_python.py
Multimodal-Emotion-Analyzer/include/: AudioEmotionAnalyzer.hpp  EmotionTypes.hpp  MultimodalEmotionAnalyzer.hpp  MultimodalEmotionFusion.hpp  PythonEmotionInference.hpp  VideoEmotionAnalyzer.hpp
Multimodal-Emotion-Analyzer/python/: emotion_model.py
Multimodal-Emotion-Analyzer/src/: AudioEmotionAnalyzer.cpp  EmotionTypes.cpp  MultimodalEmotionAnalyzer.cpp  MultimodalEmotionFusion.cpp  PythonEmotionInference.cpp  VideoEmotionAnalyzer.cpp  VideoEmotionAnalyzer_improved.cpp  main.cpp
